# template-organization

./: .gitignore  CMakeLists.txt  configure_and_build  readme.md
src/drivers/: test.cpp
src/include/: my_class.hpp  my_class_impl.hpp
src/sources/: my_class_float.cpp  my_class_int.cpp
